config/samples/access_v1alpha2_tcproute.yaml
apiVersion: access.smi-spec.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute-sample
spec:
  # Add fields here
  foo: bar
