config/samples/specs_v1alpha1_tcproute.yaml
apiVersion: specs.smi-spec.io/v1alpha1
kind: TCPRoute
metadata:
  name: tcproute-sample
spec:
  # Add fields here
  foo: bar
