config/samples/specs_v1alpha2_tcproute.yaml
apiVersion: specs.smi-spec.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-route
