config/samples/specs_v1alpha3_tcproute.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: TCPRoute
metadata:
  name: tcp-route
spec: {}
