config/samples/specs_v1alpha4_tcproute.yaml
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: tcproute-sample
spec:
  # Add fields here
  foo: bar
